Updated index.html with EmailJS script

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
         <p><a href="#top">Back to Top</a></p>
     </footer>
     <script src="theme-toggle.js"></script>
-    
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+    emailjs.init('GePeLqBUf2_7XBYqG'); // Replace with your actual User ID from EmailJS
+</script>
 </body>
 </html>
