Updated index.html with EmailJS script

--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
     </footer>
     <script src="theme-toggle.js"></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-<script>
-    emailjs.init('GePeLqBUf2_7XBYqG'); // Replace with your actual User ID from EmailJS
-</script>
+    <script>
+        emailjs.init('GePeLqBUf2_7XBYqG'); // Replace 'YOUR_PUBLIC_USER_ID' with your actual User ID
+    </script>
+    
 </body>
 </html>
