--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <p><a href="#top">Back to Top</a></p>
     </footer>
     <script src="theme-toggle.js"></script>
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.js"></script>
     <script>
         emailjs.init('GePeLqBUf2_7XBYqG'); // Replace 'YOUR_PUBLIC_USER_ID' with your actual User ID
     </script>
