Updated site structure, added triangle bullets, night mode default, fixed alignment issues

--- a/endless-summer.html
+++ b/endless-summer.html
@@ -35,7 +35,7 @@
 
         <section id="chapters">
             <h2>Chapters</h2>
-            <ul>
+            <ul class="triangle-list"> <!-- Add the triangle-list class -->
                 <li><a href="#">Prologue</a></li>
                 <li><a href="#">Chapter 1: The Shimmering Horizon</a></li>
                 <li><a href="#">Chapter 2: Echoes of Eternity</a></li>
