--- a/qeret.html
+++ b/qeret.html
@@ -34,8 +34,8 @@
         </section>
 
         <section id="chapters">
-            <h2>Chapters</h2>
-            <ul>
+            <h2>Table of Contents</h2>
+            <ul class="triangle-list"> <!-- Add the triangle-list class -->
                 <li><a href="#">Chapter 1: Introduction</a></li>
                 <li><a href="#">Chapter 2: Revolution</a></li>
                 <li><a href="#">Chapter 3: Antihydrogen Skeins</a></li>
