--- a/song-of-kali-dari.html
+++ b/song-of-kali-dari.html
@@ -35,7 +35,7 @@
 
         <section id="chapters">
             <h2>Chapters</h2>
-            <ul>
+            <ul class="triangle-list"> <!-- Add the triangle-list class -->
                 <li><a href="#">Prelude</a></li>
                 <li><a href="#">Chapter 1: The First Verse</a></li>
                 <li><a href="#">Chapter 2: Lament of the Stars</a></li>
