--- a/kesh.html
+++ b/kesh.html
@@ -35,7 +35,7 @@
 
         <section id="chapters">
             <h2>Chapters</h2>
-            <ul>
+            <ul class="triangle-list"> <!-- Add the triangle-list class -->
                 <li><a href="#">Chapter 1: Origins of Kesh</a></li>
                 <li><a href="#">Chapter 2: The Golden Age</a></li>
                 <li><a href="#">Chapter 3: Decline and Legacy</a></li>
