Updated navigation and added indentation for paragraphs

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <!-- About Me Section -->
         <section id="about">
             <h2>Hello</h2>
-            <p>This is my Writing Portfolio and Project Repository. Please visit Bio to learn about me.</p>
+            <p>This is my writing portfolio and project repository. Please visit Bio to learn about me.</p>
         </section>
 
         <!-- My Works Section -->
 <section id="Projects">
     <h2>Portfolio Content</h2>
-    <p>Below is a list of the projects hosted here. For general summaries and context please visit Projects:</p>
+    <p>Below is a list of the projects hosted here. For general summaries and context please visit <a href="projects.html">Projects</a>:</p>
     <ul class="triangle-list"> <!-- Add the class here -->
         <li><a href="qeret.html">Qeret: A City Module</a></li>
         <li><a href="endless-summer.html">Endless Summer</a></li>
