--- a/qeret.html
+++ b/qeret.html
@@ -14,29 +14,29 @@
             <h1>Qeret: A City Module</h1>
         </div>
         <button id="theme-toggle">Night</button>
-        <p>An introduction to the world of Qeret, a hard science fiction TTRPG setting.</p>
     </header>
 
-    <!-- Navigation -->
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#chapters">Chapters</a></li>
-        </ul>
-    </nav>
+<!-- Navigation -->
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="bio.html">Bio</a></li>
+        <li><a href="projects.html">Projects</a></li>
+    </ul>
+</nav>
+
 
     <!-- Main Content -->
     <main>
         <section id="overview">
             <h2>Overview</h2>
-            <p>Qeret is a richly detailed TTRPG setting inspired by the Bronze Age Near East. Here, players immerse themselves in a vibrant world of naval trade, city politics, and technological wonders.</p>
+            <p>Qeret is an immersive, Bronze Age-inspired science fiction setting where ancient traditions blend seamlessly with advanced alien technologies. It invites players to explore a world rich with lore, political intrigue, philosophical inquiry, revolution, and boundless opportunities for role-play.</p>
         </section>
 
         <section id="chapters">
             <h2>Table of Contents</h2>
             <ul class="triangle-list"> <!-- Add the triangle-list class -->
-                <li><a href="#">Chapter 1: Introduction</a></li>
+                <li><a href="chapter1-introduction.html">Chapter 1: Introduction</a></li>
                 <li><a href="#">Chapter 2: Revolution</a></li>
                 <li><a href="#">Chapter 3: Antihydrogen Skeins</a></li>
                 <!-- Add more chapters as needed -->
