Added new files and updated styling

--- a/ES-2-doleofspring.html
+++ b/ES-2-doleofspring.html
@@ -3,32 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bio</title>
+    <title>The Dole of Spring</title>
+    <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus&family=IM+Fell+English+SC&family=IM+Fell+Pica&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="filigree-box">
-            <h1>Bio</h1>
+            <h1>The Dole of Spring</h1>
         </div>
         <button id="theme-toggle">Night</button>
     </header>
-
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="endless-summer.html">Overview</a></li>
         </ul>
     </nav>
-
-    <main>
-        <section id="bio">
-            <p>Hello. My name is Tom. I love narrative, games, and world building.</p>
+    <main class="left-aligned">
+        <section>
         </section>
+
+        <nav>
+            <ul>
+                <li><a href="ES-1-waking.html">Next</a></li>
+            </ul>
+        </nav>
+        
     </main>
 
     <footer>
         <p>&copy; 2024 Thomas Eric Harney. All rights reserved.</p>
+        <p><a href="#top">Back to Top</a></p>
     </footer>
     <script src="theme-toggle.js"></script>
 </body>
