--- a/Imera-age-of-brilliance.html
+++ b/Imera-age-of-brilliance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kesh: Age of Splendor</title>
+    <title>Imera: Age of Brilliance</title>
     <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus&family=IM+Fell+English+SC&family=IM+Fell+Pica&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,18 +11,17 @@
     <!-- Header Section -->
     <header>
         <div class="filigree-box">
-            <h1>Kesh: Age of Imera</h1>
+            <h1><i>Imera: Age of Brilliance</i></h1>
         </div>
         <button id="theme-toggle">Night</button>
-        <p>A deep dive into the history and culture of Kesh, an ancient civilization.</p>
     </header>
 
     <!-- Navigation -->
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#chapters">Chapters</a></li>
+            <li><a href="bio.html">Bio</a></li>
+            <li><a href="projects.html">Projects</a></li>
         </ul>
     </nav>
 
@@ -30,15 +29,17 @@
     <main>
         <section id="overview">
             <h2>Overview</h2>
-            <p>Kesh: Age of Splendor captures the grandeur and complexity of an ancient society at the height of its power.</p>
+            <p>This project comprises design documents pertaining to a proposed science-fantasy-horror adventure game.</p>
         </section>
 
-        <section id="chapters">
-            <h2>Chapters</h2>
+        <section id="Documents">
+            <h2>Documents</h2>
             <ul class="triangle-list"> <!-- Add the triangle-list class -->
-                <li><a href="#">Chapter 1: Origins of Kesh</a></li>
-                <li><a href="#">Chapter 2: The Golden Age</a></li>
-                <li><a href="#">Chapter 3: Decline and Legacy</a></li>
+                <li><a href="imera-narrative-pitch.html">Narrative Pitch</a></li>
+                <li><a href="#">World Overview</a></li>
+                <li><a href="#">Magic System Overview</a></li>
+                <li><a href="#">Science System Overview</a></li>
+                <li><a href="#">Angelic Bestiary</a></li>
                 <!-- Add more chapters as needed -->
             </ul>
         </section>
