--- a/endless-summer.html
+++ b/endless-summer.html
@@ -11,18 +11,17 @@
     <!-- Header Section -->
     <header>
         <div class="filigree-box">
-            <h1>Endless Summer</h1>
+            <h1><i>Endless Summer</i></h1>
         </div>
         <button id="theme-toggle">Night</button>
-        <p>An existential, far-future hard science fiction novel.</p>
     </header>
 
     <!-- Navigation -->
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#overview">Overview</a></li>
-            <li><a href="#chapters">Chapters</a></li>
+            <li><a href="bio.html">Bio</a></li>
+            <li><a href="projects.html">Projects</a></li>
         </ul>
     </nav>
 
@@ -30,15 +29,15 @@
     <main>
         <section id="overview">
             <h2>Overview</h2>
-            <p>Endless Summer explores themes of existence, identity, and survival in a richly imagined far-future universe.</p>
+            <p>Endless Summer is a hard science fiction novel that spans trillions of years, from the reign of Sargon of Akkad to the death of the universe.</p>
         </section>
 
         <section id="chapters">
             <h2>Chapters</h2>
             <ul class="triangle-list"> <!-- Add the triangle-list class -->
-                <li><a href="#">Prologue</a></li>
-                <li><a href="#">Chapter 1: The Shimmering Horizon</a></li>
-                <li><a href="#">Chapter 2: Echoes of Eternity</a></li>
+                <li><a href="ES-prologue.html">Prologue</a></li>
+                <li><a href="ES-1-waking.html">I: Waking</a></li>
+                <li><a href="ES-2-doleofspring.html">II: The Dole of Spring</a></li>
                 <!-- Add more chapters as needed -->
             </ul>
         </section>
