--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- About Me Section -->
         <section id="about">
             <h2>Hello</h2>
-            <p>This is my writing portfolio and project repository. Please visit Bio to learn about me.</p>
+            <p>This is my writing portfolio and project repository. Please visit <a href="bio.html">Bio</a> to learn about me.</p>
         </section>
 
         <!-- My Works Section -->
@@ -38,10 +38,10 @@
     <h2>Portfolio Content</h2>
     <p>Below is a list of the projects hosted here. For general summaries and context please visit <a href="projects.html">Projects</a>:</p>
     <ul class="triangle-list"> <!-- Add the class here -->
-        <li><a href="qeret.html">Qeret: A City Module</a></li>
-        <li><a href="endless-summer.html">Endless Summer</a></li>
-        <li><a href="kesh.html">Kesh: Age of Splendor</a></li>
-        <li><a href="song-of-kali-dari.html">Song of Kali-Dari</a></li>
+        <li><a href="qeret.html"><i>Qeret: A City Module</i></a></li>
+        <li><a href="endless-summer.html"><i>Endless Summer</i></a></li>
+        <li><a href="Imera-age-of-brilliance.html"><i>Imera: Age of Brilliance</i></a></li>
+        <li><a href="song-of-kali-dari.html"><i>A Song for Kali-Dari</i></a></li>
     </ul>
         </section>
 
