--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
             <ul class="triangle-list">
                 <li><a href="qeret.html">Qeret: A City Module</a></li>
                 <li><a href="endless-summer.html">Endless Summer</a></li>
-                <li><a href="kesh.html">Kesh: Age of Splendor</a></li>
+                <li><a href="Imera-age-of-brilliance.html">Imera: Age of Brilliance</a></li>
                 <li><a href="song-of-kali-dari.html">Song of Kali-Dari</a></li>
             </ul>
         </section>
