--- a/qeret.html
+++ b/qeret.html
@@ -11,7 +11,7 @@
     <!-- Header Section -->
     <header>
         <div class="filigree-box">
-            <h1>Qeret: A City Module</h1>
+            <h1><i>Qeret: A City Module</i></h1>
         </div>
         <button id="theme-toggle">Night</button>
     </header>
@@ -22,6 +22,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="bio.html">Bio</a></li>
         <li><a href="projects.html">Projects</a></li>
+        <li><a href="qereti-codex.html">Codex</a></li>
     </ul>
 </nav>
 
