Edit Chapter 7; add Netusha map; expanded Codex

--- a/qeret-map.html
+++ b/qeret-map.html
@@ -40,6 +40,7 @@
         <h2><a href="images/Knakros.1.png" target="_blank">Knakros</a></h2>
         <h2><a href="images/Leu.1.png" target="_blank">Léu</a></h2>
         <h2><a href="images/Makaria.1.png" target="_blank">Makaria</a></h2>
+        <h2><a href="images/Netusha.1.png" target="_blank">Netusha</a></h2>
 
 
 
