--- a/qereti-codex.html
+++ b/qereti-codex.html
@@ -273,6 +273,12 @@
             <h2>NPCs</h2>
             <h3><u>Major</u></h3>
 
+            <p id="dourhermenes-entry"></p><p><b>Dour Hermenes</b></p>
+            <p><u>Species:</u> Human<br>
+            <u>Faction:</u> Qereti Court<br>
+            <u>Description:</u> A stern counselor and one of King Tiraal's closest confidants, Hermenes is known throughout Qeret for his cold and taciturn demeanor. Beneath this forbidding exterior lies a deeply principled man, whose quiet interventions have spared countless lives from the harsher policies favored by his rival, the Impireesh Marble. Once a ruthless Wanax (city-king) of Tylos, infamous even among the bellicose Dryic, Hermenes was overthrown for his cruelty. He has since reformed and dedicated himself to temperance, moderation, and the preservation of civic life.<br>
+            <u>Motivation:</u> To safeguard Qeret from tyranny and internal collapse by appealing to the King’s better nature and tempering his rule with caution and magnanimity. While he seeks redemption for the excesses of his past, some worry that rising tensions with the Marble might provoke a return to such excesses. </p>
+
             <p id="impireeshmarble-entry"></p><p><b>Impireesh Marble</b></p>
             <p><u>Species:</u> Impireesh Marble (Qeret)<br>
             <u>Faction:</u> Qereti Court<br>
@@ -282,7 +288,7 @@
             <p id="izabel-entry"></p><p><b>Izabel</b></p>
             <p><u>Species:</u> Human<br>
             <u>Faction:</u> Izabel's Rapture; Unfettered<br>
-            <u>Description:</u> Master orator and the sole leader of Izabel's Rapture. Known for her striking beauty, Izabel sports cropped dark hair, a deliberate departure from the popular Qereti style and a symbol of her defiance. She adopts an austere lifestyle, wearing only a rough tunic and plain linen pants. Izabel appears as a 20-year-old woman, though whether that is her true age, or she has received treatments at the Resurrection Temple, is unknown. <br>
+            <u>Description:</u> Master orator and the sole leader of Izabel's Rapture. Known for her striking beauty, Izabel sports cropped dark hair, a deliberate departure from the popular Qereti style and a symbol of her defiance. She adopts an austere lifestyle, wearing only a rough tunic and plain linen pants. Izabel appears as a 20-year-old woman, though whether that is her true age, or she has received treatments at the Resurrection Temple, is unknown.<br>
             <u>Motivation:</u> Izabel wishes to see slavery abolished in Qeret and the rest of Kassatím. Though she preaches peaceful resistance, she also secretly abets the Unfettered and their sometimes-violent methods.</p>
 
             <p id="kingtiraal-entry"></p><p><b>King Tiraal (the Magnanimous)</b></p>
@@ -295,69 +301,75 @@
             <p><u>Species:</u> Human<br>
             <u>Faction:</u> Qereti Court; Unfettered<br>
             <u>Description:</u> Queen Meshmoon is an expert (if reluctant) politician and a devoted wife. Despite her outward disdain for politics, the King frequently seeks her counsel, relying heavily on her always keen insight and tact.<br>
-            <u>Motication:</u> Queen Meshmoon secretly supports the Unfettered and subtly works to undermine her husband’s rule. Yet, her love for him endures. She dreams of a peaceful dissolution of the monarchy, free of bloodshed.</p>
+            <u>Motivation:</u> Queen Meshmoon secretly supports the Unfettered and subtly works to undermine her husband’s rule. Yet, her love for him endures. She dreams of a peaceful dissolution of the monarchy, free of bloodshed.</p>
 
             <h3><u>Minor</u></h3>
 
+            <p id="astarta-entry"></p><p><b>Astarta</b></p>
+            <p><u>Species:</u> Macroform<br>
+            <u>Faction:</u> Trader's Guild<br>
+            <u>Description:</u> Astarta is a book merchant and Trader's Guild functionary, best known for her exuberant haggling, her unsettling habit of mirroring customers' mannerisms, and her peculiar collection of satirical treatises, false histories, and inaccurate maps. Her shop, "The Errant Sign," tucked within the market lanes of Tekron's Custom, is a labyrinth of errata, misdirections, and lies. Though she presents herself as a harmless eccentric, Astarta is an astute economic thinker, advocating fiercely for modernization within the Guild, namely by endorsing the proposed railway project.<br>
+            <u>Motivation:</u> Within the Trader's Guild, Astarta champions the railway project not merely to modernize trade, but to cultivate stronger ties with Léu and Knakros — regions whose ancient libraries and robust scholarly communities she hopes to access more freely.</p>
+            
             <p id="burgot-entry"></p><p><b>Burgot</b></p>
             <p><u>Species:</u> Kemptoran<br>
             <u>Faction:</u> Qereti Court<br>
             <u>Description:</u> A controversial economist and radical reformer, Burgot is best known for his uncompromising vision of economic rationality. Drawing on obscure Kemptoran economic theory, he advocates for the total abolition of guild privilege, the deregulation of labor, the diversification of the Qereti economy, and the easing of Qeret's dependency to Combassyia. Burgot’s proposals — sweeping, and often delivered directly to the King in dry, hyperlogical proposals —have earned him admiration among some scholars and outright hostility from nearly everyone else. Though he holds no formal office, his influence in the court cannot be overstated, and many believe he is orchestrating a slow but deliberate campaign to recode Qeret’s economy from first principles. No other figure in the city speaks so openly of abolishing tariffs, centralizing currency, or replacing tradition with utility. That he is still alive is a testament either to the Court’s protection — or the sheer opacity of his work.<br>
-            <u>Motication:</u> To elevate Qeret through pure economic logic, stripping away custom in pursuit of a system governed only by necessity and reason. Privately, Burgot wishes to establish a parliamentary aristocracy in Qeret, not unlike the present system in Makaria.</p>
+            <u>Motivation:</u> To elevate Qeret through pure economic logic, stripping away custom in pursuit of a system governed only by necessity and reason. Privately, Burgot wishes to establish a parliamentary aristocracy in Qeret, not unlike the present system in Makaria.</p>
 
             <p id="dryad-entry"></p><p><b>Dryad</b></p>
             <p><u>Species:</u> Cordepede<br>
             <u>Faction:</u> Unfettered<br>
             <u>Description:</u> Dryad masquerades as a drunk, a guise that conceals his true role as an agitator sowing dissent among the cordepede community. He also serves as an Unfettered contact, typically initiating and organizing new adherents to the cause. For security reasons, he forgoes the use of a translating servitor, insisting that new recruits acquire the glove and goggles and master the gas-script of the cordepedes to communicate.<br>
-            <u>Motication:</u> Dryad is driven by a singular vision — transforming Qeret into a city where cordepedes can thrive and stand as equals among its citizens. Convinced that only a direct democracy can enfranchise the cordepedes, he perceives the monarchy as an obstacle that must be dismantled, no matter the cost.</p>
+            <u>Motivation:</u> Dryad is driven by a singular vision — transforming Qeret into a city where cordepedes can thrive and stand as equals among its citizens. Convinced that only a direct democracy can enfranchise the cordepedes, he perceives the monarchy as an obstacle that must be dismantled, no matter the cost.</p>
             
             <p id="hamil-entry"></p><p><b>Hamil</b></p>
             <p><u>Species:</u> Asectish<br>
             <u>Faction:</u> The Seditionists<br>
             <u>Description:</u> A taciturn, urban asectish who intimidates, threatens, and batters opponents of the movement. Nikkal relies on Hamil to deliver messages when bribes fail. Often sent to carry out the most destructive objectives, it was Hamil who personally devastated the Combassyian Embassy using a stolen particle hammer.<br>
-            <u>Motication:</u> Hamil intends to stage a coup within the Seditionists' coup. If the Seditionists manage to dethrone Tiraal, Hamil plans to seize the throne for himself, even if it means eliminating his comrades.</p>
+            <u>Motivation:</u> Hamil intends to stage a coup within the Seditionists' coup. If the Seditionists manage to dethrone Tiraal, Hamil plans to seize the throne for himself, even if it means eliminating his comrades.</p>
 
             <p id="komupid-entry"></p><p><b>Komupid</b></p>
             <p><u>Species:</u> Ichor<br>
             <u>Faction:</u> Ark Sodality; Institute<br>
             <u>Description:</u> An ascetic and slightly deranged Ichor who serves as the ichorian representative on the Sodality. He is also an instructor of mathematics at the Institute. His classes often drift into highly esoteric mysticism, as he attributes spiritual significance to numbers, theorems, and ratios. He earned a seat on the Sodality through sheer popularity, having attracted an almost cult-like following, consisting primarily of students.<br>
-            <u>Motication:</u> He is a vegetarian (despite the fact that ichor do not consume food) and encourages his followers to adopt the same practice. Komupid’s current obsession is something he calls "the Symmetry of Thought," a theory proposing that  ideas move through the mind in mathematically structured cycles, much like celestial bodies. As such, he spends much of his time in quiet contemplation, tracking and calculating the perceived fractalized, elliptical movements of his thoughts.</p>
+            <u>Motivation:</u> He is a vegetarian (despite the fact that ichor do not consume food) and encourages his followers to adopt the same practice. Komupid’s current obsession is something he calls "the Symmetry of Thought," a theory proposing that  ideas move through the mind in mathematically structured cycles, much like celestial bodies. As such, he spends much of his time in quiet contemplation, tracking and calculating the perceived fractalized, elliptical movements of his thoughts.</p>
 
             <p id="maal-entry"></p><p><b>Maal</b></p>
             <p><u>Species:</u> Acumine<br>
             <u>Faction:</u> Ark Sodality<br>
             <u>Description:</u> A devious acumine who is one strike away from being expelled from The Sodality. Suspected (falsely) of being a Puissant spy.<br>
-            <u>Motication:</u> Maal seeks to subtlety undermine the work of his fellow Sodality members. Further, he hopes that by ingratiating himself with the right powers in Qeret he may seize total control of the Sodality.</p>
+            <u>Motivation:</u> Maal seeks to subtlety undermine the work of his fellow Sodality members. Further, he hopes that by ingratiating himself with the right powers in Qeret he may seize total control of the Sodality.</p>
 
             <p id="odom-entry"></p><p><b>Odom</b></p>
             <p><u>Species:</u> Cordepede<br>
             <u>Faction:</u> Ark Sodality<br>
             <u>Description:</u> A taciturn cordepede representing his species' interests within the Ark Sodality. He attends every Sodality meeting alongside his translating servitor, Gaavi, who faithfully relays each word of the proceedings. Though typically subdued, when stirred to action, Odom commands the floor with formidable oratory.<br>
-            <u>Motication:</u> Odom's foremost goal is securing prosperity and equity for the cordepedes. Odom is an ardent monarchist and staunch traditionalist and believes that meaningful change can only be achieved through patience and by appealing to the better nature of the King and his subjects.</p>
+            <u>Motivation:</u> Odom's foremost goal is securing prosperity and equity for the cordepedes. Odom is an ardent monarchist and staunch traditionalist and believes that meaningful change can only be achieved through patience and by appealing to the better nature of the King and his subjects.</p>
 
             <p id="riggart-entry"></p><p><b>Riggart</b></p>
             <p><u>Species:</u> Asectish<br>
             <u>Faction:</u> The Puissant; Qereti Court<br>
             <u>Description:</u> An urban asectish with sharpened exoskeleton ridges, Riggart is Master Probity’s top assassin. Like most asectish, she is laconic. However, she does indulge in broodtea and can sometimes be found in local Qereti tea rooms — usually after a kill.<br>
-            <u>Motication:</u> Riggart is, in truth, an operative of the Impireesh Marble, and half of her missions are carried out on its behalf. She is unaware that Master Probity has uncovered her duplicity.</p>
+            <u>Motivation:</u> Riggart is, in truth, an operative of the Impireesh Marble, and half of her missions are carried out on its behalf. She is unaware that Master Probity has uncovered her duplicity.</p>
 
             <p id="shemen-entry"></p><p><b>Shemen</b></p>
             <p><u>Species:</u> Kemptoran<br>
             <u>Faction:</u> Admiralty<br>
             <u>Description:</u> An affable, yet fastidious bureaucrat tasked with overseeing the daily administration of the Admiralty. Though devoid of martial inclination, Shemen’s talent for ledgers, scheduling, and procedural enforcement makes him indispensable to Admiral Gal’s logistical apparatus. He has no particular interest in justice, warfare, or punishment, but maintains an unshakable commitment to order and stability. Pirates, in his view, are more than criminals — they are existential disruptors of civic routine. Their greatest offense, he often notes, is not theft, but impropriety.<br>
-            <u>Motication:</u> To preserve the Admiralty’s bureaucratic efficiency and ensure that Qeret’s trade networks function without disruption or indecorum. Privately, Shemen harbors grander ambitions: he hopes his reputation for administrative excellence might one day earn him a coveted court appointment in the rival city of Taath, where order is prized as highly as loyalty.</p>
+            <u>Motivation:</u> To preserve the Admiralty’s bureaucratic efficiency and ensure that Qeret’s trade networks function without disruption or indecorum. Privately, Shemen harbors grander ambitions: he hopes his reputation for administrative excellence might one day earn him a coveted court appointment in the rival city of Taath, where order is prized as highly as loyalty.</p>
 
             <p id="utica-entry"></p><p><b>Utica</b></p>
             <p><u>Species:</u> Ichor<br>
             <u>Faction:</u> Priests of Nasiru<br>
             <u>Description:</u> An exceptionally charismatic figure, she works tirelessly to enhance the public perception of the Priesthood and instill greater piety in the community. As the highest representative of the Priesthood, she is always adorned in the finest liturgical vestments, including a stole of Léusian silk.<br>
-            <u>Motication:</u> Though Utica outwardly maintains a calm and affable demeanor, she grows increasingly anxious from her responsibilities and concerns regarding the Priesthood's future. Driven by desperation, she has begun contemplating increasingly risky (and illegal) actions to secure the future of the Grand Temple and the Priesthood. </p>
+            <u>Motivation:</u> Though Utica outwardly maintains a calm and affable demeanor, she grows increasingly anxious from her responsibilities and concerns regarding the Priesthood's future. Driven by desperation, she has begun contemplating increasingly risky (and illegal) actions to secure the future of the Grand Temple and the Priesthood. </p>
 
             <p id="zygothewag-entry"></p><p><b>Zygo the Wag</b></p>
             <p><u>Species:</u> Acumine<br>
             <u>Faction:</u> Qereti Court<br>
             <u>Description:</u> An acumine resident of the Royal Palace, Zygo has secured his position in the Qereti Court through sharp wit and undeniable charm. The King delights in his biting barbs and the subtle political satires woven into his entertaining stories. Zygo always dons the latest Qereti fashions, albeit deliberately shredded — perhaps envisioning himself a tattered reflection of the culture he inhabits. His chief rival at court is Kelqart the Importunate, a beloved singer-poet.<br>
-            <u>Motication:</u> Zygo lives for simple pleasures. He revels in his station at court and will stop at nothing to preserve it. However, behind closed doors, he indulges in procuring and torturing slaves — a pastime that, if exposed, could lead to disgrace and his ejection from the palace.</p>
+            <u>Motivation:</u> Zygo lives for simple pleasures. He revels in his station at court and will stop at nothing to preserve it. However, behind closed doors, he indulges in procuring and torturing slaves — a pastime that, if exposed, could lead to disgrace and his ejection from the palace.</p>
 
         <section id="science-technology"></section>
             <h2>Science & Technology</h2>
