--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
     <section id="updates">
         <h2>Updates</h2>
         <div class="timeline-item">
+        <div class="timeline-date">4/6/25</div>
+            <div class="timeline-content">
+                    Completed the Technologists section in Chapter 7: Revolution. Glossed Ark Species. Expanded Qereti Codex. Added Netusha to Maps.
+            </div>
+        <div class="timeline-item">
         <div class="timeline-date">4/4/25</div>
             <div class="timeline-content">
                     Completed the Seditionists section and Began editing the Technologists section in Chapter 7: Revolution. Glossed Ark Species. Expanded Qereti Codex. Added Makaria to Maps.
