Finish Unfettered. Expand Codex. Gloss Ark Species.

--- a/qeret-map.html
+++ b/qeret-map.html
@@ -20,8 +20,7 @@
 <nav>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="bio.html">Bio</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="qeret.html">Overview</a></li>
         <li><a href="qereti-codex.html">Codex</a></li>
     </ul>
 </nav>
