--- a/qeret.html
+++ b/qeret.html
@@ -44,7 +44,7 @@
                 <li><a href="chapter4-arkspecies.html">Chapter 4: Ark Species [Glossing]</a></li>
                 <li><a href="chapter5-science.html">Chapter 5: Science & Technology [Glossing]</a></li>
                 <li><a href="chapter6-philosophy.html">Chapter 6: Philosophy [Glossing]</a></li>
-                <li>Chapter 7: Revolution [Editing]</a></li>
+                <li><a href="chapter7-revolution.html">Chapter 7: Revolution [Glossing]</a></li>
                 <li>Chapter 8: Industry [Editing]</a></li>
                 <li>Chapter 9: Religion [Editing]</a></li>
                 <li>Chapter 10: Art [Editing]</a></li>
