--- a/qereti-codex.html
+++ b/qereti-codex.html
@@ -311,6 +311,12 @@
             <u>Description:</u> Astarta is a book merchant and Trader's Guild functionary, best known for her exuberant haggling, her unsettling habit of mirroring customers' mannerisms, and her peculiar collection of satirical treatises, false histories, and inaccurate maps. Her shop, "The Errant Sign," tucked within the market lanes of Tekron's Custom, is a labyrinth of errata, misdirections, and lies. Though she presents herself as a harmless eccentric, Astarta is an astute economic thinker, advocating fiercely for modernization within the Guild, namely by endorsing the proposed railway project.<br>
             <u>Motivation:</u> Within the Trader's Guild, Astarta champions the railway project not merely to modernize trade, but to cultivate stronger ties with Léu and Knakros — regions whose ancient libraries and robust scholarly communities she hopes to access more freely.</p>
             
+            <p id="beirut-entry"></p><p><b>Beirut</b></p>
+            <p><u>Species:</u> Macroform<br>
+            <u>Faction:</u> The Seditionists<br>
+            <u>Description:</u> Beirut is a silver-hued orator and confidante to Nikkal, prized for his gift in cultivating alliances and securing resources with quiet, deliberate efficiency. Within the Seditionists, Beirut acts less as a public agitator and more as an unseen architect of logistics and intrigue, ensuring that arms, coin, and loyalties move when and where they are needed. His form often shimmers with restless nanite eddies when delivering backroom speeches regarding the indignities of Combassyian rule.<br>
+            <u>Motivation:</u> Beirut seeks to liberate Qeret after private probabilistic analyses convinced him that continued Combassyian rule would, with near certainty, lead to economic collapse, widespread famine, and eventual war. In opposing foreign domination, he envisions a sovereign Qeret not merely as an act of pride, but as a bulwark against catastrophe.</p>
+
             <p id="burgot-entry"></p><p><b>Burgot</b></p>
             <p><u>Species:</u> Kemptoran<br>
             <u>Faction:</u> Qereti Court<br>
@@ -347,6 +353,12 @@
             <u>Description:</u> A taciturn cordepede representing his species' interests within the Ark Sodality. He attends every Sodality meeting alongside his translating servitor, Gaavi, who faithfully relays each word of the proceedings. Though typically subdued, when stirred to action, Odom commands the floor with formidable oratory.<br>
             <u>Motivation:</u> Odom's foremost goal is securing prosperity and equity for the cordepedes. Odom is an ardent monarchist and staunch traditionalist and believes that meaningful change can only be achieved through patience and by appealing to the better nature of the King and his subjects.</p>
 
+            <p id="qarn-entry"></p><p><b>Qarn</b></p>
+            <p><u>Species:</u> Promethean<br>
+            <u>Faction:</u> Pirate League<br>
+            <u>Description:</u> A gregarious and ever-curious Promethean, Qarn is a fixture of the Pirate League’s expeditions across the Cerulean. Beneath the pretense of piracy, he pursues his true ambition: locating the legendary Universal Bauble (see Searchers of the Lost Bauble). His bulbous form, dyed a faded mariner’s blue, is often seen bobbing about Qeret’s docks, searching discarded crates and abandoned vessels with tireless enthusiasm.<br>
+            <u>Motivation:</u> To find the Universal Bauble and restore the fractured fabric of reality. Though a loyal member of the League, Qarn views piracy less as a livelihood than as a necessary means of traveling, searching, and uncovering lost relics that might lead him closer to his elusive prize.</p>
+
             <p id="riggart-entry"></p><p><b>Riggart</b></p>
             <p><u>Species:</u> Asectish<br>
             <u>Faction:</u> The Puissant; Qereti Court<br>
@@ -358,6 +370,12 @@
             <u>Faction:</u> Admiralty<br>
             <u>Description:</u> An affable, yet fastidious bureaucrat tasked with overseeing the daily administration of the Admiralty. Though devoid of martial inclination, Shemen’s talent for ledgers, scheduling, and procedural enforcement makes him indispensable to Admiral Gal’s logistical apparatus. He has no particular interest in justice, warfare, or punishment, but maintains an unshakable commitment to order and stability. Pirates, in his view, are more than criminals — they are existential disruptors of civic routine. Their greatest offense, he often notes, is not theft, but impropriety.<br>
             <u>Motivation:</u> To preserve the Admiralty’s bureaucratic efficiency and ensure that Qeret’s trade networks function without disruption or indecorum. Privately, Shemen harbors grander ambitions: he hopes his reputation for administrative excellence might one day earn him a coveted court appointment in the rival city of Taath, where order is prized as highly as loyalty.</p>
+
+            <p id="trys-entry"></p><p><b>Trys</b></p>
+            <p><u>Species:</u> Promethean<br>
+            <u>Faction:</u> Bottega<br>
+            <u>Description:</u> A small, knobby-skinned promethean with sallow skin dyed Qereti violet, Trys is the wealthiest and most influential patron within the Bottega. Once a famed director of holoplays, her melodramatic tragedies fell out of fashion decades ago, but the fortune they earned endures. She is often seen ambling through the artist commune, her viscous brain bubble swaying as she dispenses advice, critiques, and patronage with an unhurried, regal air. Despite her waning of popularity, she remains a well-respected scion of the arts and her endorsement can transform a struggling artist into a citywide sensation.<br>
+            <u>Motivation:</u> Trys seeks to preserve the Bottega as a sanctuary for radical art and free expression, resisting outside pressures and commercial encroachment. Beneath her placid exterior, she grows increasingly willing to take bold measures to protect the commune’s integrity.</p>
 
             <p id="utica-entry"></p><p><b>Utica</b></p>
             <p><u>Species:</u> Ichor<br>
